; ModuleID = '/home/carl/AnghaBench/tengine/src/os/unix/extr_ngx_process.c_ngx_debug_point.c'
source_filename = "/home/carl/AnghaBench/tengine/src/os/unix/extr_ngx_process.c_ngx_debug_point.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@ngx_cycle = common dso_local global %struct.TYPE_4__* null, align 8
@ngx_core_module = common dso_local global i32 0, align 4
@SIGSTOP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ngx_debug_point() #0 {
  %1 = alloca %struct.TYPE_3__*, align 8
  %2 = load %struct.TYPE_4__*, %struct.TYPE_4__** @ngx_cycle, align 8
  %3 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @ngx_core_module, align 4
  %6 = call i64 @ngx_get_conf(i32 %4, i32 %5)
  %7 = inttoptr i64 %6 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %7, %struct.TYPE_3__** %1, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %16 [
    i32 128, label %11
    i32 129, label %14
  ]

11:                                               ; preds = %0
  %12 = load i32, i32* @SIGSTOP, align 4
  %13 = call i32 @raise(i32 %12)
  br label %16

14:                                               ; preds = %0
  %15 = call i32 (...) @ngx_abort()
  br label %16

16:                                               ; preds = %14, %0, %11
  ret void
}

declare dso_local i64 @ngx_get_conf(i32, i32) #1

declare dso_local i32 @raise(i32) #1

declare dso_local i32 @ngx_abort(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
